--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     privileged: true
     volumes:
       - /etc/localtime:/etc/localtime:ro
-      - /volume1/SSD/work:/home/beakerx/work
+      - /home/jwkang2/work:/home/beakerx/work
     ports:
       - "5124:22"
       - "8888:8888"
